# git-helpe-rs

./: Cargo.toml  README.md  build.rs
src/: autocompletion.rs  branch.rs  cli_arguments.rs  commit.rs  git_config.rs  lib.rs  main.rs  run_mode.rs  template.rs
src/cli/: define.rs  map_to_operation.rs  mod.rs
src/file_utils/: config_file.rs
