[package]
name = "git-helpe-rs"
version = "0.1.0"
edition = "2021"

[workspace]

# members = ["Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive", "cargo"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.5.4"

[[bin]]
name = "git-helpe-rs"
path = "src/bin/main.rs"
